# Uni_Chess_Project

./: Auxiliary.c  Auxiliary.h  Board.c  Board.h  Button.c  Button.h  CMakeLists.txt  ChessBoard.c  ChessBoard.h  ChessConsoleUI.c  ChessConsoleUI.h  ChessGUI.c  ChessGUI.h  ChessGameLogic.c  ChessGameLogic.h  ChessGameModeWindow.c  ChessGameModeWindow.h  ChessGameSettings.c  ChessGameSettings.h  ChessMainMenuWindow.c  ChessMainMenuWindow.h  ChessParser.c  ChessParser.h  ConsoleUI.c  ConsoleUI.h  FileOperations.c  FileOperations.h  GUI.h  GUIStructs.h  Game.c  Game.h  GameLogic.c  GameLogic.h  GameSettings.c  GameSettings.h  HandleAndDrawGame.c  HandleAndDrawGame.h  Minimax.c  Minimax.h  OptionsButtons.c  (+24 more)
expected/: 0.out  1.out  10.out  11.out  12.out  13.out  14.out  15.out  16.out  17.out  18.out  19.out  2.out  20.out  21.out  22.out  23.out  24.out  25.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
in/: 0.in  1.in  10.in  11.in  11.xml  12.in  13.in  14.in  14.xml  15.in  16.in  16.xml  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
pictures/: Thumbs.db
